[gd_scene load_steps=17 format=2]

[ext_resource path="res://objects/enemyboss.gd" type="Script" id=1]
[ext_resource path="res://objects/enemy_gun.gd" type="Script" id=2]
[ext_resource path="res://sprittt/Flying Demon 2D Pixel Art/Sprites/with_outline/FLYING.png" type="Texture" id=3]
[ext_resource path="res://assets/AUDIO/SFX/gun-shots-from-a-distance-7-96391.mp3" type="AudioStream" id=4]
[ext_resource path="res://sprittt/Free/Traps/Saw/Chain.png" type="Texture" id=5]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 flash_color : hint_color = vec4(1.0);
uniform float flash_modifier : hint_range(0.0, 1.0) = 0.0;

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	color.rgb = mix(color.rgb, flash_color.rgb, flash_modifier);
	COLOR = color;
}
"

[sub_resource type="ShaderMaterial" id=24]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 81, 71 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 81, 0, 81, 71 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 162, 0, 81, 71 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 243, 0, 81, 71 )

[sub_resource type="SpriteFrames" id=29]
animations = [ {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "run",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 20, 40 )

[sub_resource type="SegmentShape2D" id=23]
a = Vector2( -16, 0 )
b = Vector2( 0, 0 )

[sub_resource type="Animation" id=30]
resource_name = "flash"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0, 1.0, 0.0 ]
}

[sub_resource type="CapsuleShape2D" id=31]
radius = 15.0
height = 14.0

[node name="enemyboss" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="sprite" type="AnimatedSprite" parent="."]
material = SubResource( 24 )
frames = SubResource( 29 )
animation = "run"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
self_modulate = Color( 0.737255, 0.00784314, 0.776471, 1 )
position = Vector2( -11, 9 )
shape = SubResource( 22 )

[node name="obj_detect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="obj_detect"]
position = Vector2( -2, 9 )
shape = SubResource( 23 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/flash = SubResource( 30 )

[node name="hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
self_modulate = Color( 0.403922, 0.0588235, 0.0588235, 1 )
position = Vector2( -10, 6 )
shape = SubResource( 31 )

[node name="gun" type="Sprite" parent="."]
unique_name_in_owner = true
position = Vector2( -14, 9 )
texture = ExtResource( 5 )
offset = Vector2( 2.5, 0 )
script = ExtResource( 2 )

[node name="muzzle" type="Position2D" parent="gun"]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="gun"]
stream = ExtResource( 4 )

[connection signal="body_entered" from="obj_detect" to="." method="_on_obj_detect_body_entered"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
